--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D анимация с TWEEN.js</title>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-    <script src="https://unpkg.com/tween.js@18.6.4/dist/tween.min.js"></script> <!-- Обновленный источник -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/Tween.min.js"></script> <!-- Обновленный источник -->
 </head>
 <body>
     <script>
