--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
 <script type="module">
     import {Tween, Easing} from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
-    import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js';
+
+    // Используем другой CDN для Three.js
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js';
 
     let scene, camera, renderer, cube, clock;
-    let controls;
-
+    
     // Инициализация сцены
     function init() {
         scene = new THREE.Scene();
@@ -75,3 +76,4 @@
 
 </body>
 </html>
+
