--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <script type="module">
     import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
-    import { TWEEN } from 'https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/Tween.min.js';  // Используем правильный импорт для TWEEN
+    import { TWEEN } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';  // Новый CDN для TWEEN.js
 
     let scene, camera, renderer, cube, clock;
 
