--- a/index.html
+++ b/index.html
@@ -1,73 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Animation</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        canvas {
-            display: block;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tween.js Example</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
+  <div id="box"></div>
+  
+  <script type="module">
+    import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
-<canvas id="myCanvas"></canvas>
+    const box = document.getElementById('box');
+    const coords = { x: 0, y: 0 };
 
-<script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
-    import { TWEEN } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';  // Новый CDN для TWEEN.js
+    const tween = new Tween(coords)
+      .to({ x: 300, y: 200 }, 1000)
+      .easing(Easing.Quadratic.InOut)
+      .onUpdate(() => {
+        box.style.transform = `translate(${coords.x}px, ${coords.y}px)`;
+      })
+      .start();
 
-    let scene, camera, renderer, cube, clock;
-
-    function init() {
-        // Инициализация сцены
-        scene = new THREE.Scene();
-        camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('myCanvas') });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-
-        // Добавляем куб
-        const geometry = new THREE.BoxGeometry();
-        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-        cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
-
-        camera.position.z = 5;
-
-        // Создаем часы для анимации
-        clock = new THREE.Clock();
-
-        // Настроим анимацию с Tween.js
-        const position = { x: 0, y: 0, z: 5 };
-        const tween = new TWEEN.Tween(position)
-            .to({ x: 1, y: 1, z: 1 }, 2000)
-            .easing(TWEEN.Easing.Quadratic.InOut)
-            .onUpdate(() => {
-                cube.position.set(position.x, position.y, position.z);
-            })
-            .start();
-
-        animate();
+    function animate(time) {
+      tween.update(time);
+      requestAnimationFrame(animate);
     }
-
-    function animate() {
-        requestAnimationFrame(animate);
-
-        // Обновляем все анимации
-        TWEEN.update();
-
-        // Обновляем сцену
-        renderer.render(scene, camera);
-    }
-
-    init();
-</script>
-
+    requestAnimationFrame(animate);
+  </script>
 </body>
 </html>
+
