--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tween.js Example</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Тест анимации</title>
+    <style>
+        #box {
+            width: 100px;
+            height: 100px;
+            background-color: deeppink;
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
-  <div id="box"></div>
-  
-  <script type="module">
-    import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
-    const box = document.getElementById('box');
-    const coords = { x: 0, y: 0 };
+    <div id="box"></div>
 
-    const tween = new Tween(coords)
-      .to({ x: 300, y: 200 }, 1000)
-      .easing(Easing.Quadratic.InOut)
-      .onUpdate(() => {
-        box.style.transform = `translate(${coords.x}px, ${coords.y}px)`;
-      })
-      .start();
+    <script type="module">
+        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
-    function animate(time) {
-      tween.update(time);
-      requestAnimationFrame(animate);
-    }
-    requestAnimationFrame(animate);
-  </script>
+        const box = document.getElementById('box');
+        
+        const coords = { x: 0, y: 0 }; // Начальные координаты
+
+        // Создание анимации
+        const tween = new Tween(coords)
+            .to({ x: 300, y: 200 }, 2000) // Движение на координаты (300, 200) за 2 секунды
+            .easing(Easing.Quadratic.InOut) // Плавная анимация
+            .onUpdate(() => {
+                // Обновление позиции элемента на экране
+                box.style.transform = `translate(${coords.x}px, ${coords.y}px)`;
+            })
+            .start(); // Запуск анимации
+
+        // Анимационный цикл
+        function animate(time) {
+            tween.update(time); // Обновление анимации
+            requestAnimationFrame(animate); // Повторный вызов для следующего кадра
+        }
+
+        requestAnimationFrame(animate);
+    </script>
+
 </body>
 </html>
 
