--- a/index.html
+++ b/index.html
@@ -3,47 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тест анимации</title>
+    <title>Three.js GLB Model with Animation</title>
     <style>
-        #box {
-            width: 100px;
-            height: 100px;
-            background-color: deeppink;
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: url('hauhi.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+        canvas {
+            display: block;
+        }
+        .overlay-text {
             position: absolute;
+            top: 50px;
+            width: 100%;
+            text-align: center;
+            font-size: 48px;
+            font-weight: bold;
+            color: black;
+            font-family: Arial, sans-serif;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
 </head>
 <body>
+    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
-    <div id="box"></div>
-
-    <script type="module">
-        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
-
-        const box = document.getElementById('box');
+    <script>
+        // Создаем сцену, камеру и рендерер
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         
-        const coords = { x: 0, y: 0 }; // Начальные координаты
+        camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
+        camera.lookAt(0, 0, 0); // Смотрит в центр сцены
 
-        // Создание анимации
-        const tween = new Tween(coords)
-            .to({ x: 300, y: 200 }, 2000) // Движение на координаты (300, 200) за 2 секунды
-            .easing(Easing.Quadratic.InOut) // Плавная анимация
-            .onUpdate(() => {
-                // Обновление позиции элемента на экране
-                console.log(`Updating: x=${coords.x}, y=${coords.y}`); // Добавляем лог для проверки
-                box.style.transform = `translate(${coords.x}px, ${coords.y}px)`;
-            })
-            .start(); // Запуск анимации
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.outputEncoding = THREE.sRGBEncoding;
+        document.body.appendChild(renderer.domElement);
 
-        // Анимационный цикл
-        function animate(time) {
-            tween.update(time); // Обновление анимации
-            requestAnimationFrame(animate); // Повторный вызов для следующего кадра
+        // Освещение
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.3);
+        scene.add(ambientLight);
+
+        const pointLight = new THREE.PointLight(0xf8c8a8, 5);
+        pointLight.position.set(-3, 5, 7);
+        scene.add(pointLight);
+
+        // Текущая модель
+        let currentModel = null;
+        let mixer;
+
+        // Функция для загрузки модели
+        function loadModel(modelPath) {
+            const loader = new THREE.GLTFLoader();
+            loader.load(modelPath, function (glb) {
+                // Очистка предыдущей модели
+                if (currentModel) {
+                    scene.remove(currentModel);
+                }
+
+                // Загружаем новую модель
+                const model = glb.scene;
+                mixer = new THREE.AnimationMixer(model);
+
+                glb.animations.forEach((clip) => {
+                    const action = mixer.clipAction(clip);
+                    action.play();
+                });
+
+                model.position.set(0, 0, 0);
+                model.scale.setScalar(1.2);
+                scene.add(model);
+
+                // Обновляем текущую модель
+                currentModel = model;
+
+                // Сохраняем правильное положение камеры
+                camera.position.set(0, 5, 5);
+                camera.lookAt(0, 0, 0);
+            });
         }
 
-        requestAnimationFrame(animate);
-    </script>
+        // Загружаем начальную модель
+        loadModel('/untitled2.glb');
 
+        // Функция для анимации движения камеры
+        function animateCamera(targetPosition, duration) {
+            const coords = {
+                x: camera.position.x,
+                y: camera.position.y,
+                z: camera.position.z
+            };
+
+            new TWEEN.Tween(coords)
+                .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
+                .easing(TWEEN.Easing.Quadratic.InOut)
+                .onUpdate(() => {
+                    camera.position.set(coords.x, coords.y, coords.z);
+                    camera.lookAt(0, 0, 0);
+                })
+                .start();
+        }
+
+        // Обработчик прокрутки колесика
+        window.addEventListener('wheel', function(event) {
+            if (event.deltaY > 0) {
+                // Прокрутка вниз, загружаем следующую модель и анимируем камеру
+                loadModel('/untitled.glb');
+                animateCamera({x: 0, y: 5, z: 7}, 1000); // Камера плавно отходит назад
+            } else {
+                // Прокрутка вверх, возвращаемся к предыдущей модели и анимируем камеру
+                loadModel('/untitled2.glb');
+                animateCamera({x: 0, y: 5, z: 5}, 1000); // Камера возвращается на прежнюю позицию
+            }
+        });
+
+        // Анимация и рендеринг
+        function animate() {
+            requestAnimationFrame(animate);
+            const delta = 0.014;
+            if (mixer) mixer.update(delta);
+            TWEEN.update(); // Обновляем TWEEN
+            renderer.render(scene, camera);
+        }
+
+        animate();
+    </script>
 </body>
 </html>
-
