--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <!-- Подключаем Three.js и другие библиотеки -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
-    <script>
+    <script type="module">
+        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
+
         // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -100,9 +100,9 @@
                 z: camera.position.z
             };
 
-            new TWEEN.Tween(coords)
+            new Tween(coords)
                 .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
-                .easing(TWEEN.Easing.Quadratic.InOut)
+                .easing(Easing.Quadratic.InOut)
                 .onUpdate(() => {
                     camera.position.set(coords.x, coords.y, coords.z);
                     camera.lookAt(0, 0, 0);
