--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js GLB Model with Tween.js</title>
+    <title>Three.js GLB Model with Tween.js Animation</title>
     <style>
         body {
             margin: 0;
@@ -25,16 +25,20 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <script type="module">
-        import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.module.js';
-        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
-        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script> <!-- Тег для TWEEN.js -->
+</head>
+<body>
+    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
+    <script>
         // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 5, 5);
-        camera.lookAt(0, 0, 0);
+        
+        camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
+        camera.lookAt(0, 0, 0); // Смотрит в центр сцены
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -49,15 +53,20 @@
         pointLight.position.set(-3, 5, 7);
         scene.add(pointLight);
 
-        // Текущая модель и анимация
+        // Текущая модель
         let currentModel = null;
         let mixer;
-        let currentTween = null;
 
         // Функция для загрузки модели
-        function loadModel(modelPath, isNextModel) {
-            const loader = new GLTFLoader();
-            loader.load(modelPath, (glb) => {
+        function loadModel(modelPath) {
+            const loader = new THREE.GLTFLoader();
+            loader.load(modelPath, function (glb) {
+                // Очистка предыдущей модели
+                if (currentModel) {
+                    scene.remove(currentModel);
+                }
+
+                // Загружаем новую модель
                 const model = glb.scene;
                 mixer = new THREE.AnimationMixer(model);
 
@@ -66,72 +75,67 @@
                     action.play();
                 });
 
-                // Начальная позиция новой модели
-                model.position.set(0, isNextModel ? -5 : 5, 0);
+                model.position.set(0, 0, 0);
                 model.scale.setScalar(1.2);
                 scene.add(model);
 
-                // Анимация перемещения текущей модели вверх
-                if (currentModel) {
-                    const startPos = { y: currentModel.position.y };
-                    const endPos = { y: 10 };
-
-                    currentTween = new Tween(startPos)
-                        .to(endPos, 1000)
-                        .easing(Easing.Quadratic.Out)
-                        .onUpdate(() => {
-                            currentModel.position.y = startPos.y;
-                        })
-                        .onComplete(() => {
-                            scene.remove(currentModel);
-                        })
-                        .start();
-                }
-
-                // Анимация перемещения новой модели на место
-                const newModelStartPos = { y: model.position.y };
-                const newModelEndPos = { y: 0 };
-
-                new Tween(newModelStartPos)
-                    .to(newModelEndPos, 1000)
-                    .easing(Easing.Quadratic.Out)
-                    .onUpdate(() => {
-                        model.position.y = newModelStartPos.y;
-                    })
-                    .start();
-
                 // Обновляем текущую модель
                 currentModel = model;
+
+                // Сохраняем правильное положение камеры
+                camera.position.set(0, 5, 5);
+                camera.lookAt(0, 0, 0);
             });
         }
 
         // Загружаем начальную модель
-        loadModel('/untitled2.glb', false);
+        loadModel('/untitled2.glb');
+
+        // Функция для анимации движения камеры
+        function animateCamera(targetPosition, duration) {
+            const coords = {
+                x: camera.position.x,
+                y: camera.position.y,
+                z: camera.position.z
+            };
+
+            const tween = new TWEEN.Tween(coords) // Используем глобальный TWEEN
+                .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
+                .easing(TWEEN.Easing.Quadratic.InOut)
+                .onUpdate(() => {
+                    camera.position.set(coords.x, coords.y, coords.z);
+                    camera.lookAt(0, 0, 0);
+                })
+                .start();
+
+            return tween;
+        }
 
         // Обработчик прокрутки колесика
-        window.addEventListener('wheel', (event) => {
+        window.addEventListener('wheel', function(event) {
             if (event.deltaY > 0) {
-                // Прокрутка вниз, загружаем следующую модель
-                loadModel('/untitled.glb', true);
+                // Прокрутка вниз, загружаем следующую модель и анимируем камеру
+                loadModel('/untitled.glb');
+                animateCamera({x: 0, y: 5, z: 7}, 1000); // Камера плавно отходит назад
             } else {
-                // Прокрутка вверх, возвращаемся к предыдущей модели
-                loadModel('/untitled2.glb', false);
+                // Прокрутка вверх, возвращаемся к предыдущей модели и анимируем камеру
+                loadModel('/untitled2.glb');
+                animateCamera({x: 0, y: 5, z: 5}, 1000); // Камера возвращается на прежнюю позицию
             }
         });
 
         // Анимация и рендеринг
         function animate(time) {
             requestAnimationFrame(animate);
-            Tween.update(time); // Обновляем анимации Tween.js
             const delta = 0.014;
             if (mixer) mixer.update(delta);
+            TWEEN.update(); // Обновляем TWEEN
             renderer.render(scene, camera);
         }
+
         animate();
     </script>
-</head>
-<body>
-    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 </body>
 </html>
+
 
