--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.umd.js"></script> <!-- Подключаем корректный скрипт -->
-</head>
-<body>
-    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
+    <script type="module">
+        import { TWEEN } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
-    <script>
         // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -137,4 +134,3 @@
     </script>
 </body>
 </html>
-
