--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
     <!-- Используем модульный импорт Three.js -->
     <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
+        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';  // Исправлено
         import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
         import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
@@ -88,6 +88,8 @@
                 // Сохраняем правильное положение камеры
                 camera.position.set(0, 5, 5);
                 camera.lookAt(0, 0, 0);
+            }, undefined, (error) => {
+                console.error('Ошибка загрузки модели: ', error);
             });
         }
 
