--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <!-- Используем модульный импорт Three.js -->
+    <!-- Используем правильный импорт для Three.js -->
     <script type="module">
         import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
         import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
-        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
+        import * as TWEEN from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
         // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
@@ -88,8 +88,6 @@
                 // Сохраняем правильное положение камеры
                 camera.position.set(0, 5, 5);
                 camera.lookAt(0, 0, 0);
-            }, undefined, (error) => {
-                console.error('Ошибка загрузки модели: ', error);
             });
         }
 
@@ -104,9 +102,9 @@
                 z: camera.position.z
             };
 
-            const tween = new Tween(coords) // Используем класс Tween для анимации
+            const tween = new TWEEN.Tween(coords) // Используем класс Tween для анимации
                 .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
-                .easing(Easing.Quadratic.InOut)
+                .easing(TWEEN.Easing.Quadratic.InOut)
                 .onUpdate(() => {
                     camera.position.set(coords.x, coords.y, coords.z);
                     camera.lookAt(0, 0, 0);
@@ -134,7 +132,7 @@
             requestAnimationFrame(animate);
             const delta = 0.014;
             if (mixer) mixer.update(delta);
-            TWEEN.update(); // Обновляем TWEEN
+            TWEEN.update(time); // Обновляем TWEEN
             renderer.render(scene, camera);
         }
 
