--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script type="module">
         import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
         import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
-        import * as TWEEN from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
+        import { Tween, Easing } from 'https://unpkg.com/@tweenjs/tween.js@23.1.3/dist/tween.esm.js';
 
         // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
@@ -102,9 +102,9 @@
                 z: camera.position.z
             };
 
-            const tween = new TWEEN.Tween(coords) // Используем класс Tween для анимации
+            const tween = new Tween(coords) // Используем класс Tween для анимации
                 .to({ x: targetPosition.x, y: targetPosition.y, z: targetPosition.z }, duration)
-                .easing(TWEEN.Easing.Quadratic.InOut)
+                .easing(Easing.Quadratic.InOut)
                 .onUpdate(() => {
                     camera.position.set(coords.x, coords.y, coords.z);
                     camera.lookAt(0, 0, 0);
@@ -143,4 +143,3 @@
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 </body>
 </html>
-
